<resources>
    <string name="app_name">Popular Movies</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_favorite_movie">Favorite this movie</string>
    <string name="iv_movie_poster">Movie Poster</string>
    <string name="iv_movie_thumbnail">Movie Thumbnail</string>
    <string name="iv_refresh_button">Refresh</string>
    <string name="tv_original_title">Original Title:</string>
    <string name="tv_movie_original_title">Movie Title</string>
    <string name="tv_average_rating">Average Rating:</string>
    <string name="tv_movie_average_rating">Movie Rating</string>
    <string name="tv_release_date">Release Date:</string>
    <string name="tv_movie_release_date">Movie Release Date</string>
    <string name="tv_movie_synopsis">Movie Synopsis</string>
    <string name="tv_error_msg">An error has occurred. Please try Refreshing.</string>
    <string name="tv_empty_favorites">You don\'t have any favorite movie yet.</string>
    <string name="tv_label_review_author">Author:</string>
    <string name="tv_review_author">Author Name</string>
    <string name="tv_review_content">Review Content</string>
    <string name="tv_label_review_number">Review</string>
    <string name="tv_review_number">#num</string>
    <string name="iv_trailers_thumbnail">Movie Trailer</string>
    <string name="content_authority">com.rondao.upopularmovies</string>
</resources>
