<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_label_review_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tv_label_review_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_review_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_review_number"
        app:layout_constraintStart_toEndOf="@+id/tv_label_review_number"
        app:layout_constraintTop_toTopOf="@+id/tv_label_review_number"
        tools:text="@string/tv_review_number" />

    <TextView
        android:id="@+id/tv_label_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tv_label_review_author"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_review_number" />

    <TextView
        android:id="@+id/tv_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_review_author"
        app:layout_constraintStart_toEndOf="@+id/tv_label_review_author"
        app:layout_constraintTop_toTopOf="@+id/tv_label_review_author"
        tools:text="@string/tv_review_author" />

    <TextView
        android:id="@+id/tv_review_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_review_author"
        tools:text="@string/tv_review_content" />
</android.support.constraint.ConstraintLayout>
