<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.rondao.upopularmovies.details.MovieDetailsActivity">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="92dp"
            android:layout_height="135dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/iv_movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_original_title"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_original_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_movie_original_title" />

        <TextView
            android:id="@+id/tv_average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_average_rating"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_original_title" />

        <TextView
            android:id="@+id/tv_movie_average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_average_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_original_title"
            tools:text="@string/tv_movie_average_rating" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_release_date"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_average_rating" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_average_rating"
            tools:text="@string/tv_movie_release_date" />

        <TextView
            android:id="@+id/tv_movie_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            tools:text="@string/tv_movie_synopsis" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_synopsis" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_trailers" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>